--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image" href="/logo5.png" />
+    <link rel="icon" type="image" href="assets/logo5.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#000000" />
     <title>Dynamofleet</title>
+    
     <script src="https://accounts.google.com/gsi/client" async defer></script>
   </head>
   <body>
